add endpoint hello